--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!doctype html>
 <html lang= "en">
-  <body bgcolor = "#FFA9EA">
+  <body bgcolor = "#82B1FF">
    <a href="index.html">Home</a>
    <a href="portfolio.html">My Portfolio</a>
    <a href="aboutme.html">About Me</a>
-   <h1> Aarohi's Home Page! </h1>
-	<p style="font-family:courier;">LOST IN THE SAUCE</p>
-    <img src= "https://www.greenvilletoyota.com/static/dealer-10711/1068809.jpg" width ="500" height ="250">
-    <img src= "https://img.ifunny.co/images/152be57116d5a6f8bbd2f9e25574e6caf51d38fe3b5a519d54ba76256128b751_1.gif" width = "250" height = "400">
-    <img src= "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS7oCGNGe-gZWe_jbD6KwduScJv7xYCHznqtKPV_HT_-aWmjBc9&s">
+   <h1 style= "text-align:center ; font-family: Verdana ; color:White; background-color:DodgerBlue"> Aarohi's Home Page! </h1>
+   <button>Take me to the Toyotathon Shrine</button>
+   <button>Show me some mediocre memes</button>
+   <button>Click on this for a surprise</button>
+   
+<img src= "https://lh3.googleusercontent.com/proxy/dvlxidv5lP8jACw_w3V6jUm1YZC-CJyZCwcNy85dlc7iNmyHynTbbIqi55SEY7GDlRZTUE3XEPfk8Zqs7akgjiGFZp4uJh85rQ" alt="Cloud" width="700">
   </body>
 </html>
