--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
    <button>Take me to the Toyotathon Shrine</button>
    <button>Show me some mediocre memes</button>
    <button>Click on this for a surprise</button>
+    <img src= "https://lh3.googleusercontent.com/proxy/dvlxidv5lP8jACw_w3V6jUm1YZC-CJyZCwcNy85dlc7iNmyHynTbbIqi55SEY7GDlRZTUE3XEPfk8Zqs7akgjiGFZp4uJh85rQ" alt="Cloud" width="700">
 <style>
   body{
-    background: url(https://www.clipartkey.com/mpngs/m/214-2147136_transparent-blue-stars-png-blue-aesthetic-stickers-png.png);
+    background: url(https://toppng.com/uploads/preview/free-png-download-drawing-png-images-background-png-star-115629377569r8lxojf4b.png);
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
   }
-<img src= "https://lh3.googleusercontent.com/proxy/dvlxidv5lP8jACw_w3V6jUm1YZC-CJyZCwcNy85dlc7iNmyHynTbbIqi55SEY7GDlRZTUE3XEPfk8Zqs7akgjiGFZp4uJh85rQ" alt="Cloud" width="700">
+
   </body>
 </html>
