--- a/aboutme.html
+++ b/aboutme.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>About Me</title>
-  </head>
 <body>
+  <img src="aboutmenoback.png">
 </body>
 </html>
       
