--- a/aboutme.html
+++ b/aboutme.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
+  <h1> About Me </h1>
 <body>
-  <img src="aboutmenoback.png">
+ 	<p> Here's a little bit about me. My name is Aarohi and I am a senior. I enjoy looking at clouds and memes about Toyotathon. In fact, if you are interested, you can visit my Toyotathon meme shrine on my website. Or, you can look at some of my other favorite memes. </p>
 </body>
 </html>
       
