--- a/portfolio.html
+++ b/portfolio.html
@@ -1,1 +1,7 @@
-
+<!DOCTYPE html>
+<html>
+  <h1> Portfolio </h1>
+<body>
+ 	<p> Here are some of the projects I've been working on in AP Computer Principles. </p>
+</body>
+</html>
