--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang= "en">
   <body bgcolor = "#82B1FF">
    <a href="index.html">Home</a>
-   <a href="portfolio.html">My Portfolio</a>
+   <a href="portfolio.html">Portfolio</a>
    <a href="aboutme.html">About Me</a>
    <h1 style= "text-align:center ; font-family: Verdana ; color:White; background-color:DodgerBlue"> Aarohi's Home Page! </h1>
    <button>Take me to the Toyotathon Shrine</button>
