--- a/aboutme.html
+++ b/aboutme.html
@@ -2,7 +2,7 @@
 <html>
   <h1> About Me </h1>
 <body>
- 	<p> Here's a little bit about me. My name is Aarohi and I am a senior. I enjoy looking at clouds and memes about Toyotathon. In fact, if you are interested, you can visit my Toyotathon meme shrine on my website. Or, you can look at some of my other favorite memes. </p>
+ 	<p> Here's a picture of me and my best friends.</p>
 </body>
 </html>
       
