--- a/aboutme.html
+++ b/aboutme.html
@@ -2,7 +2,8 @@
 <html>
   <h1> About Me </h1>
 <body>
- 	<p> Here's a picture of me and my best friends.</p>
+ 	<p> Here's a picture of me and some of my best friends.</p>
+  <img src= "https://lh3.googleusercontent.com/XyJuHjATa0I-2Ny_7Qy0XTTgVIviC2U3NNrUzw-bzElBFwNxL8TEyQDxCMrafh7WN0_mcWvq230v36aHZedbxLFwMjWM2R1xP-g1-9q6pH83dKyLxaqvW1gyyFbGHfEwPiw_CIZ1kW1brq1OzhKxTpWSRLfQOR-X-_eeLeTKBc0-t6xEWljYCtPEqn-UJiQVXZ7pTwkRCcPmBxoU7GubT36kREHZV1m6UJ2BcS3u6C548RkmZpDOTwWbZ260VhydjZydZFyja1tRJgSp0175bNF54i9ywQb31uSx-K96zed6aA5DpxtkAYGyuLOprs0xzwGWtYdHG8YKBWCFF1GW5Vnft0P_XHtlPof3eLNdfbIIj16LG22ZJMVYHUnl9qNmAS7t2lbUJDpEPwsdCqCBLhzFuc2i151uclia75CMw7SeUGQkibpjNI7Js47qq6c5DZNZK9HHKfipwoB_6iCf6vEcNnIw8NL6Brw-56myImIiV3HOf_1gx_3uYE-Z-17nOBhddLCYP0ZCYTbjY8AKs7nkSyewSNaQEX12HDrOiZPOELJyN1FS2FnW5iiIzXpf_A9bCTA7CclxRT5mFWOA1HA7nUVhKM0-qSHowKsVXXfG0nAbscWJzjZR36IG4UombvWaOgbOAtXptSk6yzp3EAO691goaeqDdoSqLVmS3EpSMVIloBEvNt0Lbuqfw37NbhpG1acdKqvU4y0wpWU3WTj9MjnIsQ_41YtR6vWbBmFwC4ws=w417-h625-no">
 </body>
 </html>
       
