--- a/memes.html
+++ b/memes.html
@@ -5,4 +5,5 @@
     <p>Welcome! Here you will find a collection of my favorite memes</p>
     <h2>Toyotathon</h2>
     <h2>Connect 4</h2>
+    </html>
   </body>
