--- a/memes.html
+++ b/memes.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang= "en">
-  <body>
-    <h1>Memes</h1>
+   <body bgcolor = "#82B1FF">
+     <h1 style= "text-align:center ; font-family: Verdana ; color:White; background-color:DodgerBlue"> Memes </h1>
     <p>Welcome! Here you will find a collection of my favorite memes</p>
     <h2>Toyotathon</h2>
     <h2>Connect 4</h2>
