--- a/portfolio.html
+++ b/portfolio.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <h1> Portfolio </h1>
+   <h1 style= "text-align:center ; font-family: Verdana ; color:White; background-color:DodgerBlue"> Portfolio </h1>
 <body>
  	<p> Here are some of the projects I've been working on in AP Computer Principles. </p>
 </body>
