--- a/aboutme.html
+++ b/aboutme.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <h1> About Me </h1>
+   <h1 style= "text-align:center ; font-family: Verdana ; color:White; background-color:DodgerBlue"> About Me </h1>
 <body>
  	<p> Here's a picture of me and some of my best friends.</p>
   <center>
