--- a/portfolio.html
+++ b/portfolio.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
    <h1 style= "text-align:center ; font-family: Verdana ; color:White; background-color:DodgerBlue"> Portfolio </h1>
-<body>
+<body bgcolor = "#82B1FF">
  	<p> Here are some of the projects I've been working on in AP Computer Principles. </p>
 </body>
 </html>
