--- a/portfolio.html
+++ b/portfolio.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
+   <a style=font-family: Verdana; color:White; href= "index.html">Return to Home Page</a>
+   <a style=font-family: Verdana; color:White; href= "index.html">About Me</a>
+   <a style=font-family: Verdana; color:White; href= "index.html">Memes</a>
    <h1 style= "text-align:center ; font-family: Verdana ; color:White; background-color:DodgerBlue"> Portfolio </h1>
 <body bgcolor = "#82B1FF">
- 	<p> Here are some of the projects I've been working on in AP Computer Principles. </p>
+ 	<p style= "text-align: center ; font-family: Verdana; color: White; > Here are some of the projects I've been working on in AP Computer Principles. </p>
 </body>
 </html>
