--- a/memes.html
+++ b/memes.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <html lang= "en">
    <body bgcolor = "#82B1FF">
+   <a style=font-family: Verdana; color:White; href= "index.html">Return to Home Page</a>
+   <a style=font-family: Verdana; color:White; href= "index.html">About Me</a>
+   <a style=font-family: Verdana; color:White; href= "index.html">Memes</a>
      <h1 style= "text-align:center ; font-family: Verdana ; color:White; background-color:DodgerBlue"> Memes </h1>
     <p>Welcome! Here you will find a collection of my favorite memes</p>
     <h2>Toyotathon</h2>
