--- a/memes.html
+++ b/memes.html
@@ -2,8 +2,8 @@
 <html lang= "en">
    <body bgcolor = "#82B1FF">
    <a style=font-family: Verdana; color:White; href= "index.html">Return to Home Page</a>
-   <a style=font-family: Verdana; color:White; href= "index.html">About Me</a>
-   <a style=font-family: Verdana; color:White; href= "index.html">Memes</a>
+   <a style=font-family: Verdana; color:White; href= "aboutme.html">About Me</a>
+   <a style=font-family: Verdana; color:White; href= "portfolio.html">Portfolio</a>
      <h1 style= "text-align:center ; font-family: Verdana ; color:White; background-color:DodgerBlue"> Memes </h1>
     <p>Welcome! Here you will find a collection of my favorite memes</p>
     <h2>Toyotathon</h2>
