--- a/aboutme.html
+++ b/aboutme.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
    <a style=font-family: Verdana; color:White; href= "index.html">Return to Home Page</a>
-   <a style=font-family: Verdana; color:White; href= "index.html">About Me</a>
-   <a style=font-family: Verdana; color:White; href= "index.html">Memes</a>
+   <a style=font-family: Verdana; color:White; href= "porfolio.html">Porfolio</a>
+   <a style=font-family: Verdana; color:White; href= "memes.html">Memes</a>
    <h1 style= "text-align:center ; font-family: Verdana ; color:White; background-color:DodgerBlue"> About Me </h1>
 <body>
  	<p> Here's a picture of me and some of my best friends.</p>
