--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
     <a href="memes.html">Memes</a>
    <h1 style= "text-align:center ; font-family: Verdana ; color:White; background-color:DodgerBlue"> Aarohi's Home Page! </h1>
     <img src= "https://lh3.googleusercontent.com/proxy/dvlxidv5lP8jACw_w3V6jUm1YZC-CJyZCwcNy85dlc7iNmyHynTbbIqi55SEY7GDlRZTUE3XEPfk8Zqs7akgjiGFZp4uJh85rQ" alt="Cloud" width="1400">
-
+    <style>
+    body {
+    background: url(https://media3.giphy.com/media/NzSUEgbTWB7TW/giphy.gif);
+    background-attachment: fixed;
+    background-size:cover;
+    }
+    </style>
   </body>
 </html>
 
