--- a/memes.html
+++ b/memes.html
@@ -1,6 +1,13 @@
 <!doctype html>
 <html lang= "en">
    <body bgcolor = "#82B1FF">
+      <style>
+    body {
+    background: url(https://media3.giphy.com/media/NzSUEgbTWB7TW/giphy.gif);
+    background-attachment: fixed;
+    background-size:cover;
+    }
+    </style>
    <a style=font-family: Verdana; color:White; href= "index.html">Return to Home Page</a>
    <a style=font-family: Verdana; color:White; href= "aboutme.html">About Me</a>
    <a style=font-family: Verdana; color:White; href= "portfolio.html">Portfolio</a>
