--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,13 @@
    <a style=font-family: Verdana; color:White; href= "aboutme.html">About Me</a>
    <a style=font-family: Verdana; color:White; href= "memes.html">Memes</a>
    <h1 style= "text-align:center ; font-family: Verdana ; color:White; background-color:DodgerBlue"> Portfolio </h1>
+   <style>
+    body {
+    background: url(https://media3.giphy.com/media/NzSUEgbTWB7TW/giphy.gif);
+    background-attachment: fixed;
+    background-size:cover;
+    }
+    </style>
 <body bgcolor = "#82B1FF">
  	<p style= "text-align: center ; font-family: Verdana; color: White; > Here are some of the projects I've been working on in AP Computer Principles. </p>
 </body>
