--- a/aboutme.html
+++ b/aboutme.html
@@ -7,7 +7,7 @@
 <body bgcolor = "#82B1FF">
    <style>
     body {
-    background: url(https://media3.giphy.com/media/NzSUEgbTWB7TW/giphy.gif);
+    background: url(https://media.giphy.com/media/2C8Kf24dnrYNW/giphy.gif);
     background-attachment: fixed;
     background-size:cover;
     }
