--- a/portfolio.html
+++ b/portfolio.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
    <a style=color:White; href= "index.html">Return to Home Page</a>
-   <a style=font-family: Verdana; color:White; href= "aboutme.html">About Me</a>
-   <a style=font-family: Verdana; color:White; href= "memes.html">Memes</a>
+   <a style=color:White; href= "aboutme.html">About Me</a>
+   <a style=color:White; href= "memes.html">Memes</a>
    <h1 style= "text-align:center ; font-family: Verdana ; color:White; background-color:DodgerBlue"> Portfolio </h1>
    <style>
     body {
