--- a/portfolio.html
+++ b/portfolio.html
@@ -12,5 +12,8 @@
     </style>
 <body bgcolor = "#82B1FF">
  	<p style= "text-align: center ; font-family: Verdana; color: White; > Here are some of the projects I've been working on in AP Computer Principles. </p>
+<iframe src="https://scratch.mit.edu/projects/365905034/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+ <p style=color:White; font-size:40 px> We made a Scratch game in which a astronaut dog is accidentally released into space, and he must fly back to his spaceship! Give it a try :)</p>
+   <p style=color:White; font-size:40 px> This is me:</p>                                                                                                                                            
 </body>
 </html>
