--- a/portfolio.html
+++ b/portfolio.html
@@ -11,9 +11,13 @@
     }
     </style>
 <body bgcolor = "#82B1FF">
+     <p>NetLogo simulation: I stumbled upon an intriguing virus simulator that projected the effects of a viral infection with adjustable population density, chances of infection and recovery, and 
+   incubation time. The modification I made to the simulation is initially introducing 50 infected humans into the population instead of 10.
+   </p>
+   <img src="https://mail.google.com/mail/u/0?ui=2&ik=91152a5824&attid=0.1&permmsgid=msg-a:r9147900663328276070&th=171c30d8e9c27caa&view=fimg&sz=s0-l75-ft&attbid=ANGjdJ-EcRdX2ql6GzN-vgDWe_Nb4vA2bHS2TMN1d5y2JPCxxrf-6mudofJEuGU3VrOWPp8B6GqhBluP-zKzkxOo2hh40sxbgHBX-PTqirsI640PPXrrs_9u5cjgqMU&disp=emb&realattid=ii_k9kivuul0" alt="Virus Simulator">
  	<p style= "text-align: center ; font-family: Verdana; color: White; > Here are some of the projects I've been working on in AP Computer Principles. </p>
 <iframe src="https://scratch.mit.edu/projects/365905034/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
  <p style=color:White; font-size:40 px> We made a Scratch game in which a astronaut dog is accidentally released into space, and he must fly back to his spaceship! Give it a try :)</p>
-   <p style=color:White; font-size:40 px> This is me:</p>                                                                                                                                            
+                                                                                                                                             
 </body>
 </html>
