--- a/portfolio.html
+++ b/portfolio.html
@@ -1,12 +1,23 @@
 <!doctype html>
+<html lang = "en">
+   <head>
+      <meta charset="utf-8">
+      <title>Portfolio</title>   
+   </head>
+   <body bgcolor="#8FBC8F">
+      <a href="index.html">Home</a>
+      <a href="portfolio.html">Portfolio</a>
+      <a href="aboutme.html">About Me</a>
+      <center>
+         <h1> My Portfolio </h1>
+         <p> This page is to display the projects I have made in AP Computer Principles</p>
+      </center>
+      <br>
+      <center>
+      <p style="font-size:180%;"> A game I have made in Scratch. An astronaut dog is accidentally released into space, and he must fly back to his spaceship! Give it a try :)</p>
+      <iframe src="https://scratch.mit.edu/projects/365905034/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+      </center>
 
-<html lang="en">
-   <a style=color:White; href= "index.html">Return to Home Page</a>
-   <a style=color:White; href= "aboutme.html">About Me</a>
-
-    <head>
-        <meta charset="utf-8">
-        <title>Portfolio</title>   
-    </head>
-
+      
+      
 </html>
