--- a/portfolio.html
+++ b/portfolio.html
@@ -20,8 +20,8 @@
       <br>
       <center>
          <p style="font-size:180%;"> A Trivia game made in MIT App Inventor. This game is a fun way to test your general knowledge about Trivia. The pictures below show the Starting Screen and one of the Questions as well. Play our fun game and see if you can get 100%!!!!</p>
-          <img src=>
-          <img src=>
+          <img src= "mitappinventor2.png">
+  
       </center>
       
 
