--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
       </center>
       <br>
       <center>
-      <p style="font-size:130%;"> A game I have made in Scratch. An astronaut dog is accidentally released into space, and he must fly back to his spaceship! Give it a try :)</p>
+      <p style="font-size:130%;"> A game I have made in Scratch. An astronaut dog is accidentally released into space, and he must fly back to his spaceship! Use the arrow keys to control where Spot flies, and make sure he dodges all of the space debris!! Give it a try :)</p>
       <iframe src="https://scratch.mit.edu/projects/365905034/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
       </center>
       <br>
