--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
             <iframe height="500px" width="100%" src="https://repl.it/@aarohizade/InteractiveFiction?lite=true" scrolling="no" frameborder="no" allowtransparency="true" allowfullscreen="true" sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals"></iframe>
             <p style="font-size:130%;">This is an interactive fiction story created in Python. Your ship sinks in the middle of the ocean. See if you can make it safely back to land by making 7 correct decisions!!</p>
        <center>
-          <iframe height="500px" width="100%" src="https://repl.it/@aarohizade/InteractiveFiction?lite=true" scrolling="no" frameborder="no" allowtransparency="true" allowfullscreen="true" sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals"></iframe>
+          <iframe height="500px" width="100%" src="https://repl.it/@aarohizade/BabyNameGraph-#main.py" scrolling="no" frameborder="no" allowtransparency="true" allowfullscreen="true" sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals"></iframe>
           <p style="font-size:130%;"> I created a pie chart using matplotlib which shows the top ten most popular newborn girl names in California in the year 1960. The data was gathered from the US Social Security Administration, which has been publishing the top 1000 newborn names for each sex since 1960. </p>
        </center>
 </html>
